# dear-sql

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  format
include/: application.hpp
include/database/: database.hpp  db.hpp  db_interface.hpp  postgresql.hpp  query_executor.hpp  sqlite.hpp
include/tabs/: tab.hpp  tab_manager.hpp
include/ui/: database_sidebar.hpp  db_connection_dialog.hpp  db_sidebar.hpp
include/utils/: file_dialog.hpp  toggle_button.hpp
src/: application.cpp  application.mm  main.cpp  themes.hpp
src/database/: database.cpp  db.cpp  db_factory.cpp  postgresql.cpp  query_executor.cpp  sqlite.cpp
src/tabs/: tab.cpp  tab_manager.cpp
src/ui/: database_sidebar.cpp  db_connection_dialog.cpp  db_sidebar.cpp
src/utils/: file_dialog.cpp  toggle_button.cpp
